Fix Bug 1213372, move secondary links to footer, download button styling and logic

--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -426,7 +426,7 @@
               <input id="id-input" name="phone-or-email" type="text" required>
             </div>
             <div class="form-submit">
-              <button type="submit" class="button-flat"
+              <button type="submit" class="button"
               {% if platform == 'android' %} data-download-os="Android"
               {% elif platform == 'ios' %} data-download-os="iOS" {% endif %}>{{ _('Send') }}</button>
             </div>
