--- a/bedrock/base/templates/product-all-macros.html
+++ b/bedrock/base/templates/product-all-macros.html
@@ -27,7 +27,7 @@
           {% endif %}
         {% endfor -%}
       </datalist>
-      <button class="button arrow" type="submit"><span>{{ _('Search') }}</span></button>
+      <button class="form-button" type="submit"><span>{{ _('Search') }}</span></button>
     </div>
     {% if test_builds %}
       <div class="other-column">
