--- a/bedrock/firefox/templates/firefox/desktop/desktop-base.html
+++ b/bedrock/firefox/templates/firefox/desktop/desktop-base.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div id="subscribe-wrapper">
         {# L10n: Line break for visual formatting. #}
-        {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='white') }}
+        {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='light') }}
       </div>
       <div id="download-wrapper">
         {{ download_firefox() }}
