--- a/bedrock/firefox/templates/firefox/ios.html
+++ b/bedrock/firefox/templates/firefox/ios.html
@@ -28,7 +28,7 @@
       <a class="dl-button" rel="external" href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}" data-link-type="download" data-download-os="iOS">
         <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}">
       </a>
-      <button class="send-to button-flat-dark" type="button" data-button-name="Get Firefox for iOS">{{ _('Get Firefox for iOS') }}</button>
+      <button class="send-to button dark" type="button" data-button-name="Get Firefox for iOS">{{ _('Get Firefox for iOS') }}</button>
     </div>
   {% endcall %}
 {% endblock %}
@@ -51,7 +51,7 @@
         <a href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}" data-link-type="download" data-download-os="iOS"><img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}"></a>
       </p>
       <p class="send-to-device">
-        <button class="send-to button-flat-green" data-button-name="Get it now">{{ _('Get it now') }}</button>
+        <button class="send-to button green" data-button-name="Get it now">{{ _('Get it now') }}</button>
       </p>
     </div>
 
@@ -157,6 +157,12 @@
       {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='dark') }}
     </div>
   </aside>
+{% endblock %}
+
+{% block site_footer %}
+  {% with fx_footer_links=True, current_platform='ios' %}
+    {% include 'includes/site-footer.html' %}
+  {% endwith %}
 {% endblock %}
 
 {% block js %}
