--- a/bedrock/firefox/templates/firefox/organizations/organizations.html
+++ b/bedrock/firefox/templates/firefox/organizations/organizations.html
@@ -79,7 +79,7 @@
         <input type="text" name="fullname" size="30" value="" placeholder="{{ _('Full Name') }}" />
       </div>
       <div class="field">
-        <input type="submit" name="email-button" value="{{ _('Subscribe') }}" class="button" />
+        <input type="submit" name="email-button" value="{{ _('Subscribe') }}" class="form-button" />
       </div>
     </form>
 
