--- a/bedrock/mozorg/templates/mozorg/contribute/index.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <p class="cta"><a href="{{ url('mozorg.contribute.signup') }}" data-link-type="button" data-link-name="Get Involved">{{ _('Get Involved') }}</a></p>
+      <p class="cta"><a href="{{ url('mozorg.contribute.signup') }}" class="button" data-link-type="button" data-link-name="Get Involved">{{ _('Get Involved') }}</a></p>
 
       <div class="cycle-pager"></div>
     </div>
@@ -114,7 +114,7 @@
         <li class="step2">{{ _('Stand by for an email that will connect you to the Mozilla community') }}</li>
         <li class="step3">{{ _('Create your Mozillians account and share your contributions with the world') }}</li>
       </ol>
-      <p class="cta"><a href="{{ url('mozorg.contribute.signup') }}" data-link-type="button" data-link-name="Get started">{{ _('Get started') }}</a></p>
+      <p class="cta"><a href="{{ url('mozorg.contribute.signup') }}" class="button" data-link-type="button" data-link-name="Get started">{{ _('Get started') }}</a></p>
     </div>
   </section>
 
