--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -36,16 +36,13 @@
         .span(3);
         float: none;
         margin-left: 0;
-        vertical-align: middle;
+        padding: 10px;
+        height: 52px;
+        vertical-align: top;
         line-height: 1.3;
     }
     button {
-        vertical-align: middle;
-        line-height: 1.3;
-
-        span {
-            margin-right: -4px;
-        }
+        width: 40%;
     }
     .search-column {
         float: left;
@@ -112,7 +109,7 @@
                 padding: 10px 10px 10px 45px;
                 background: transparent url(/media/img/firefox/all/download-icons-desktop.png) left center no-repeat;
             }
-            
+
             &.win64 a {
                 background-position: -300px 50%
             }
