--- a/media/css/firefox/channel.less
+++ b/media/css/firefox/channel.less
@@ -143,6 +143,22 @@
     .inline-block;
     margin: 0 (@gridGutterWidth / 2);
     text-align: left;
+
+    .fx-privacy-link {
+        a:link,
+        a:visited {
+            color: #333;
+        }
+    }
+}
+
+#page-developer {
+    .fx-privacy-link {
+        a:link,
+        a:visited {
+            color: #fff;
+        }
+    }
 }
 
 p.more {
@@ -189,4 +205,3 @@ p.more a:after {
 .pager-page h3 {
     margin-bottom: @baseLine;
 }
-
