--- a/media/css/firefox/desktop/common.less
+++ b/media/css/firefox/desktop/common.less
@@ -637,8 +637,9 @@ html[dir="rtl"] {
         .box-shadow(none);
         .font-size(@largeFontSize);
         border: 0;
-        padding: .75em 20px;
+        padding: 15px;
         width: 100%;
+        height: 50px;
     }
 
     select {
