--- a/media/css/firefox/family/index.less
+++ b/media/css/firefox/family/index.less
@@ -87,18 +87,7 @@
         padding: 0 (@gridGutterWidth * 3) 0 @gridGutterWidth;
     }
 
-    .btn-download {
-        .font-size(@smallFontSize);
-        padding: .5em 30px;
-        margin: 5px 10px 0;
-        background-color: #6fbe4a;
-
-        &:hover,
-        &:focus,
-        &:active {
-            background-color: lighten(#6fbe4a, 5%);
-        }
-
+    .button {
         @media only screen and (max-width: @breakTablet) {
             display: block;
         }
