--- a/media/css/firefox/new/common.less
+++ b/media/css/firefox/new/common.less
@@ -40,6 +40,23 @@
     .transition(opacity 0.2s ease);
 }
 
+/* hide all download related links in the footer initially */
+.fx-footer-links.os_android,
+.fx-footer-links.os_ios,
+.fx-footer-links.os_desktop {
+    display: none;
+}
+
+/* show links based on thge current os */
+.linux .fx-footer-links.os_desktop,
+.linux.x86.x64 .fx-footer-links.os_desktop,
+.osx .fx-footer-links.os_desktop,
+.windows .fx-footer-links.os_desktop,
+.android .fx-footer-links.os_android,
+.ios .fx-footer-links.os_ios {
+    display: block;
+}
+
 html[lang|="en"] #main-headline span:first-child {
     display: inline-block;
     width: 100%;
@@ -89,7 +106,8 @@ html[lang|="en"] #main-headline span:first-child {
     }
 
     #colophon {
-        .primary {
+        .primary,
+        .fx-footer-links {
             text-align: left;
 
             li {
@@ -107,6 +125,10 @@ html[lang|="en"] #main-headline span:first-child {
                     border: 0;
                 }
             }
+        }
+
+        .fx-footer-links {
+            border-top: 1px dotted @textColorLight;
         }
     }
 }
