--- a/media/css/mozorg/about-forums.less
+++ b/media/css/mozorg/about-forums.less
@@ -58,6 +58,24 @@
 
 .main-column {
     .span(9);
+
+    form {
+        a {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"] {
+            margin: 10px 10px 0 0;
+            padding: 16px @baseLine 12px;
+            width: 50%;
+            height:20px;
+        }
+
+        .form-button {
+            width: 35%;
+        }
+    }
 }
 
 .sidebar {
