--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -25,7 +25,7 @@
     color: #fff;
     display: inline-block;
     border: 0;
-    border-radius: .5em;
+    border-radius: 4px;
     padding: 10px 20px;
     text-transform: uppercase;
     font-weight: bold;
@@ -402,14 +402,6 @@ textarea:focus {
         width: 100%;
         text-align: center;
         z-index: 1000;
-
-        a {
-            .button-flat;
-            .trailing-arrow;
-            .font-size(18px);
-            padding: 20px 40px;
-            min-width: 240px;
-        }
     }
 }
 
@@ -644,14 +636,6 @@ textarea:focus {
 
     .cta {
         margin-top: 40px;
-
-        a {
-            .button-flat;
-            .trailing-arrow;
-            .font-size(18px);
-            min-width: 240px;
-            padding: 20px 30px;
-        }
     }
 }
 
