--- a/media/css/newsletter/fxnewsletter-subscribe.less
+++ b/media/css/newsletter/fxnewsletter-subscribe.less
@@ -92,8 +92,9 @@
         .box-shadow(none);
         .font-size(@largeFontSize);
         border: 0;
-        padding: .75em 20px;
+        padding: 15px 10px;
         width: 100%;
+        height: 50px;
     }
 
     select {
