--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -1,7 +1,6 @@
 @import "lib.less";
 @import "reset.less";
 @import "fonts.less";
-@import "buttons.less";
 @import "buttons-new.less";
 @import "animations.less";
 
@@ -791,6 +790,12 @@ nav.menu-bar {
 
     .col-2 ul {
         overflow: hidden;
+
+        &.fx-footer-links {
+            li {
+                float: none;
+            }
+        }
 
         li {
             float: left;
