--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -16,6 +16,15 @@
               <li class="wrap"><a href="{{ donate_url('footer') }}" class="donate" data-link-type="footer" data-link-name="Donate">{{ _('Donate') }}</a></li>
               <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></li>
             </ul>
+
+            {% if fx_footer_links %}
+              {% if current_platform %}
+                {{ firefox_footer_links(channel=current_channel, platform=current_platform) }}
+              {% else %}
+                {{ firefox_footer_links(channel=current_channel) }}
+              {% endif %}
+            {% endif %}
+
             <ul class="links-legal">
               <li><a href="{{ url('privacy') }}" data-link-type="footer" data-link-name="Privacy">{{ _('Privacy') }}</a></li>
               <li class="wrap"><a href="{{ url('privacy.notices.websites') }}#cookies" data-link-type="footer" data-link-name="Cookies">{{ _('Cookies') }}</a></li>
