--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -28,17 +28,17 @@
 {% block body_class %}mozid{% endblock %}
 
 {% block site_header %}
-  <div id="conditional-download-bar">
+  <div id="conditional-download-bar" class="infobar">
     <div class="content">
       <div class="message" id="dlbar-oldfx-desktop">
         {{ _('You’re using an older version of Firefox for desktop.') }}
         {{ _('Update today to stay fast and safe.') }}
-        <a class="button-flat btn-download" href="{{ url('firefox.new') }}?scene=2" data-link-type="download" data-download-os="Desktop">{{ _('Download') }}</a>
+        <a class="button green" href="{{ url('firefox.new') }}?scene=2" data-link-type="download" data-download-os="Desktop">{{ _('Download') }}</a>
       </div>
       <div class="message" id="dlbar-nonfx">
         {{ _('Choose Independent.') }}
         {{ _('Choose Firefox.') }}
-        <a class="button-flat btn-download" href="{{ url('firefox.new') }}?scene=2" data-link-type="download" data-download-os="Desktop">{{ _('Download') }}</a>
+        <a class="button green" href="{{ url('firefox.new') }}?scene=2" data-link-type="download" data-download-os="Desktop">{{ _('Download') }}</a>
       </div>
       <div class="message" id="dlbar-nonfx-android">
         <a rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">{{ _('Get Firefox for Android') }}</a>
@@ -161,7 +161,7 @@
   <aside id="newsletter-subscribe" class="ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="content container">
       {# L10n: Line break for visual formatting. #}
-      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='white') }}
+      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='light') }}
     </div>
   </aside>
 {% endblock %}
@@ -170,7 +170,6 @@
 <footer id="footer">
   <div class="content">
     <a class="mozlogo" href="{{ url('mozorg.home') }}" data-link-type="footer" data-link-name="Mozilla">Mozilla</a>
-
     <ul>
       <li>
         <a href="{{ url('privacy') }}" data-link-type="footer" data-link-name="Privacy Policy">{{ _('Privacy Policy') }}</a>
