--- a/bedrock/firefox/templates/firefox/hello/index-b.html
+++ b/bedrock/firefox/templates/firefox/hello/index-b.html
@@ -10,7 +10,7 @@
   <aside id="newsletter-subscribe" class="ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="container">
       {# L10n: Line break for visual formatting. #}
-      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='white') }}
+      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='light') }}
     </div>
   </aside>
 {% endblock %}
