--- a/bedrock/legal/templates/legal/fraud-report.html
+++ b/bedrock/legal/templates/legal/fraud-report.html
@@ -187,7 +187,7 @@
             </div>
           </div>
 
-          <button type="submit" name="submit_form" class="button">{{ _('Send Report') }}</button>
+          <button type="submit" name="submit_form" class="form-button">{{ _('Send Report') }}</button>
         </form>
       {% else %}
         <h2>{{ _('Your report has been sent.') }}</h2>
