--- a/bedrock/mozorg/templates/mozorg/about/forums/forums.html
+++ b/bedrock/mozorg/templates/mozorg/about/forums/forums.html
@@ -38,11 +38,11 @@
   <a href="http://www.google.com/"><img
        src="https://www.google.com/logos/Logo_25wht.gif"
        width="75" height="32" alt="Google" /></a>
-     <input type="text" name="as_q" maxlength="256" value="" />
+     <input type="text" name="as_q" maxlength="256" value="" placeholder="{{ _('Search Forums') }}" />
        <input type="hidden" name="hl" value="en" />
        <input type="hidden" name="lr" value="" />
        <input type="hidden" name="as_ugroup" value="mozilla.*" />
-       <input type="submit" name="btnG" value="{{ _('Search Forums') }}" class="button" />
+       <input type="submit" name="btnG" value="{{ _('Search') }}" class="form-button" />
   </form>
 
   <nav class="toc">
