--- a/bedrock/mozorg/templates/mozorg/partnerships.html
+++ b/bedrock/mozorg/templates/mozorg/partnerships.html
@@ -194,7 +194,7 @@
     </div>
 
     <div class="field footer-field">
-      <input type="submit" id="sf-form-submit" name="submit" value="{{ _('Submit my request') }}" class="button" />
+      <input type="submit" id="sf-form-submit" name="submit" value="{{ _('Submit my request') }}" class="form-button general" />
     </div>
 
     </form>
