--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -38,41 +38,6 @@
     position: relative;
 }
 
-.sky .sync-button {
-    display: block;
-    padding: 15px;
-    text-align: center;
-    border-radius: 6px;
-    background: @syncBlue;
-    color: #fff;
-    .font-size(@largeFontSize);
-    text-transform: uppercase;
-    .transition();
-    width: 60%;
-    margin: 0 auto;
-    &:focus,
-    &:active,
-    &:hover {
-        color: #fff;
-        background: darken(@syncBlue, 5%);
-        text-decoration: none;
-        .transition(all linear .1s);
-    }
-    &.green {
-        background: @syncGreen;
-        &:focus,
-        &:active,
-        &:hover {
-            background: darken(@syncGreen, 5%);
-        }
-    }
-}
-
-.sky button.sync-button {
-    border: none;
-    cursor: pointer;
-}
-
 .button-footer {
     margin: @baseLine 0 0 0;
     text-align: center;
@@ -81,10 +46,12 @@
     }
 }
 
-.buttons .download-button {
-    display: block;
-    width: 300px;
-    margin: auto;
+.buttons {
+    .download-button,
+    .button {
+        display: block;
+        margin: auto;
+    }
 }
 
 .state-fx-android .primary .inner-wrapper {
@@ -265,9 +232,6 @@
     h3 {
         text-shadow: 0 1px rgba(0,0,0,0.1);
     }
-    .sync-button {
-        margin-top: @baseLine;
-    }
 }
 
 .features {
@@ -357,9 +321,20 @@
     display: block;
 }
 
-.js .show-not-fx .download-button ul {
-    width: 250px;
-    margin: 0 auto;
+.js .show-not-fx .download-button {
+    ul {
+        width: 250px;
+        margin: 0 auto 10px;
+    }
+}
+
+.show-not-fx {
+    .fx-privacy-link {
+        a:link,
+        a:visited {
+            color: #333;
+        }
+    }
 }
 
 .state-fx-android {
@@ -546,10 +521,6 @@ html[dir="rtl"] {
     .sync-anim {
         float: none;
         margin: 0 auto @baseLine auto;
-    }
-
-    .sky .sync-button {
-        width: 100%;
     }
 
     .primary {
