Fix Bug 1213372, move secondary links to footer, download button styling and logic

--- a/bedrock/firefox/templates/firefox/new/variants/scene2/base.html
+++ b/bedrock/firefox/templates/firefox/new/variants/scene2/base.html
@@ -118,7 +118,9 @@
 {% block email_form %}{% endblock %}
 
 {% block site_footer %}
-  {% include 'firefox/includes/simple_footer.html' %}
+  {% with fx_footer_links=True %}
+    {% include 'firefox/includes/simple_footer.html' %}
+  {% endwith %}
 {% endblock %}
 
 {% block js %}
